testing fix for background image on mobile

--- a/simple/styles.css
+++ b/simple/styles.css
@@ -17,14 +17,27 @@ section {
   z-index: 2;
 }
 section#hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), #2d391b url("../assets/bg-image-2560x1920-q90.jpg") no-repeat bottom right fixed;
-  background-size: cover;
   height: 600px;
   color: white;
   box-shadow: inset 0px -1em 1em rgba(0, 0, 0, 0.2);
   padding-top: 1em;
   text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
   z-index: 1;
+}
+section#hero:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), #2d391b url("../assets/bg-image-2560x1920-q90.jpg") no-repeat bottom right fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 section#hero .wrapper {
   margin-top: 150px;
